wip: Add small icons next to messages to show their delivery/read status

--- a/samples/Indiko.Maui.Controls.Chat.Sample/MainPage.xaml
+++ b/samples/Indiko.Maui.Controls.Chat.Sample/MainPage.xaml
@@ -27,7 +27,10 @@
             EmojiReactionFontSize="14"
             EmojiReactionTextColor="{StaticResource Primary}"
             LoadMoreMessagesCommand="{Binding LoadOlderMessagesCommand}"
-            ScrolledCommand="{Binding ScrolledCommand}">
+            ScrolledCommand="{Binding ScrolledCommand}"
+            SendIcon="dev.png"
+            DeliveredIcon="dev.png"
+            ReadIcon="dev.png">
 
         </idk:ChatView>
 
