added message tab commands

--- a/samples/Indiko.Maui.Controls.Chat.Sample/MainPage.xaml
+++ b/samples/Indiko.Maui.Controls.Chat.Sample/MainPage.xaml
@@ -28,6 +28,9 @@
             EmojiReactionTextColor="{StaticResource Primary}"
             LoadMoreMessagesCommand="{Binding LoadOlderMessagesCommand}"
             ScrolledCommand="{Binding ScrolledCommand}"
+            AvatarTappedCommand="{Binding OnAvatarTappedCommand}"
+            MessageTappedCommand="{Binding OnMessageTappedCommand}"
+            EmojiReactionTappedCommand="{Binding OnEmojiReactionTappedCommand}"
             SendIcon="send.png"
             DeliveredIcon="check.png"
             ReadIcon="read.png">
