wip: ios added system message support

--- a/samples/Indiko.Maui.Controls.Chat.Sample/MainPage.xaml
+++ b/samples/Indiko.Maui.Controls.Chat.Sample/MainPage.xaml
@@ -40,7 +40,10 @@
             ReadIcon="read.png"
             ScrollToFirstNewMessage="True"
             ShowNewMessagesSeperator="True"
-            ScrolledToLastMessageCommand="{Binding ScrolledToLastMessageCommand}">
+            ScrolledToLastMessageCommand="{Binding ScrolledToLastMessageCommand}"
+            SystemMessageBackgroundColor="{StaticResource Gray100}"
+            SystemMessageTextColor="{StaticResource Black}"
+            SystemMessageFontSize="12">
 
         </idk:ChatView>
 
