--- a/samples/Indiko.Maui.Controls.Chat.Sample/Resources/Styles/Colors.xaml
+++ b/samples/Indiko.Maui.Controls.Chat.Sample/Resources/Styles/Colors.xaml
@@ -37,6 +37,15 @@
     <Color x:Key="Yellow100Accent">#F7B548</Color>
     <Color x:Key="Yellow200Accent">#FFD590</Color>
     <Color x:Key="Yellow300Accent">#FFE5B9</Color>
+
+    <Color x:Key="Red100Accent">#E74C3C</Color>
+    <Color x:Key="Red200Accent">#F1948A</Color>
+    <Color x:Key="Red300Accent">#FADBD8</Color>
+
+    <Color x:Key="Green100Accent">#27AE60</Color>
+    <Color x:Key="Green200Accent">#58D68D</Color>
+    <Color x:Key="Green300Accent">#ABEBC6</Color>
+
     <Color x:Key="Cyan100Accent">#28C2D1</Color>
     <Color x:Key="Cyan200Accent">#7BDDEF</Color>
     <Color x:Key="Cyan300Accent">#C3F2F4</Color>
