--- a/samples/Indiko.Maui.Controls.Chat.Sample/MainPage.xaml
+++ b/samples/Indiko.Maui.Controls.Chat.Sample/MainPage.xaml
@@ -42,7 +42,7 @@
             ShowNewMessagesSeperator="True"
             ScrolledToLastMessageCommand="{Binding ScrolledToLastMessageCommand}"
             SystemMessageBackgroundColor="{StaticResource Yellow300Accent}"
-            SystemMessageTextColor="{StaticResource Red200Accent}"
+            SystemMessageTextColor="{StaticResource Tertiary}"
             SystemMessageFontSize="14">
 
         </idk:ChatView>
